# api-billing-gateway

./: README.md  pyproject.toml
docs/: DESIGN.md  SECURITY_AUDIT.md
src/api_billing_gateway/: __init__.py  context.py  middleware.py  tier.py
src/api_billing_gateway/adapters/: __init__.py  base.py  proxy_secret.py  static_bearer.py  token_exchange.py
tests/: test_middleware.py  test_proxy_secret.py  test_static_bearer.py
