[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-billing-gateway"
version = "0.1.0"
description = "Unified auth/tier/usage middleware across API marketplaces (RapidAPI, Zyla, Postman, APYHub, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lion" }]
dependencies = [
    "starlette>=0.37",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
